{
    "name": "DialogInputAction",
    "maps": [
        {
            "name": "Dialogue",
            "id": "c2cbbe64-09b5-4e53-b50e-ee33b528b7d0",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "e70b998f-bf9f-4aa4-9292-18f8dc225322",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "d247fff6-0812-4518-a694-01fc92b6ad47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ContinueStory",
                    "type": "Button",
                    "id": "05638074-2afb-45da-9bfe-ed2e0d42ac14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3788d09f-1081-4d27-8575-552b0ed9fddf",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7440d2e5-7851-44e3-bb25-84e691b3758d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acc36c20-4956-4d7c-8c8f-f3dea09b4cb2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ContinueStory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}